<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Eguzkia</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_see_location">See location</string>
    <string name="action_see_city">See city</string>
    <string name="action_refresh">Refresh</string>
    <string name="preference_location_key">location</string>
    <string name="preference_location_label">Location</string>
    <string name="preference_location_default">Paris,fr</string>
    <string name="preference_unit_key">unit</string>
    <string name="preference_unit_label">Temperature units</string>
    <string name="preference_unit_default">metric</string>
    <string name="title_activity_city">CityActivity</string>

</resources>
