<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="@string/preference_location_key"
        android:title="@string/preference_location_label"
        android:defaultValue="@string/preference_location_default"
        android:inputType="text"
        android:singleLine="true"
        android:maxLines="1" />

    <ListPreference
        android:key="@string/preference_unit_key"
        android:title= "@string/preference_unit_label"
        android:defaultValue="@string/preference_unit_default"
        android:entries="@array/preference_units_list"
        android:entryValues="@array/preference_units_list_value"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

</PreferenceScreen>
